--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,8 +36,7 @@
     "scripts",
     "acceptance-tests",
     "webpack",
-    "jest",
-    "src/setupTests.ts"
+    "jest"
   ],
   "include": ["src"]
 }
