--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,23 +1,32 @@
 alembic==1.0.8
 amqp==2.4.2
+astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.1.0
 billiard==3.5.0.5
 Click==7.0
 Flask==1.0.2
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10
 kombu==4.4.0
+lazy-object-proxy==1.4.3
 Mako==1.0.7
 MarkupSafe==1.1.1
+mccabe==0.6.1
 more-itertools==6.0.0
 numpy==1.16.2
+pep8==1.7.1
+pkg-resources==0.0.0
 pluggy==0.9.0
 py==1.8.0
+pylint==2.4.4
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
 six==1.12.0
 SQLAlchemy==1.3.0
+typed-ast==1.4.1
 vine==1.2.0
 Werkzeug==0.14.1
+wrapt==1.11.2
