--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,11 @@ astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.1.0
 billiard==3.5.0.5
-Click==7.0
-Flask==1.0.2
+click==7.1.1
+Flask==1.1.2
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2==2.11.2
 kombu==4.4.0
 lazy-object-proxy==1.4.3
 Mako==1.0.7
@@ -28,5 +28,5 @@ six==1.12.0
 SQLAlchemy==1.3.0
 typed-ast==1.4.1
 vine==1.2.0
-Werkzeug==0.14.1
+Werkzeug==1.0.1
 wrapt==1.11.2
