--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,12 @@
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.5",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
