--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ attrs==19.1.0
 billiard==3.5.0.5
 click==7.1.1
 Flask==1.1.2
+Flask-Cors==3.0.8
 gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
@@ -23,7 +24,7 @@ pylint==2.4.4
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
-six==1.12.0
+six==1.14.0
 SQLAlchemy==1.3.0
 typed-ast==1.4.1
 vine==1.2.0
