Setup redux, hook into initial backend API for POC

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.34",
     "@types/react-bootstrap": "^1.0.0",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
     "typesafe-actions": "^5.1.0",
