--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.4",
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
