--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,7 @@ RUN python -m venv venv
 RUN venv/bin/pip install -r requirements.txt
 
 COPY backend/construction_projects construction_projects
+COPY backend/material_selector material_selector
 COPY backend/models models
 COPY backend/app app
 COPY backend/migrations migrations
@@ -23,6 +24,7 @@ RUN chmod +x boot.sh
 ENV FLASK_APP run.py
 ENV SQLALCHEMY_DATABASE_URI sqlite://///home/docker/test.db
 ENV BASE_UPLOAD_PATH /home/docker/temp
+ENV MATERIAL_API_URL https://materials-api.takeoffs.io
 
 RUN chown -R docker:docker ./
 USER docker
