--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
+    "@types/redux-logger": "^3.0.7",
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
     "node-sass": "^4.13.1",
@@ -26,6 +27,7 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
     "typesafe-actions": "^5.1.0",
