--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-data-table-component": "^6.7.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
@@ -30,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
+    "styled-components": "^5.1.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
