--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,10 +4,13 @@ astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.1.0
 billiard==3.5.0.5
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.1
 Flask==1.1.2
 Flask-Cors==3.0.8
 gunicorn==20.0.4
+idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -24,9 +27,11 @@ pylint==2.4.4
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
+requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.0
 typed-ast==1.4.1
+urllib3==1.25.9
 vine==1.2.0
 Werkzeug==1.0.1
 wrapt==1.11.2
