--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:ts": "tslint 'src/**/*.{ts,tsx,js}'"
   },
