--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,13 +21,16 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==6.0.0
 pep8==1.7.1
+pg8000==1.15.2
 pluggy==0.9.0
+psycopg2==2.8.5
 py==1.8.0
 pylint==2.4.4
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
 requests==2.23.0
+scramp==1.1.1
 six==1.14.0
 SQLAlchemy==1.3.0
 typed-ast==1.4.1
