--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.17.10-alpine
 
-COPY ./frontend/build /var/www
-COPY ./frontend/nginx.conf /etc/nginx/nginx.conf
+COPY ./build /var/www
+COPY ./nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 
 ENTRYPOINT ["nginx","-g","daemon off;"]
